# exoskeleton

install/: local_setup.sh  setup.sh
install/exo_urdf/share/exo_urdf/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/exo_urdf/share/exo_urdf/cmake/: exo_urdfConfig-version.cmake  exo_urdfConfig.cmake
install/exo_urdf/share/exo_urdf/environment/: ament_prefix_path.dsv  path.dsv
install/exoskeleton_description/share/exoskeleton_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gz_ros2_control/include/gz_ros2_control/: gz_ros2_control_plugin.hpp  gz_system.hpp  gz_system_interface.hpp
install/gz_ros2_control/share/gz_ros2_control/: gz_hardware_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
src/exo_urdf/: CMakeLists.txt  package.xml
src/exo_urdf/config/: controllers.yaml
src/exo_urdf/launch/: display.launch copy 2.py  display.launch copy.py  display.launch.py  test.launch copy.py  test.launch.py
src/exo_urdf/rviz/: urdf.rviz
src/exo_urdf/test/: pid_controller.cpp
src/exo_urdf/urdf/: exo.urdf  exo.urdf.xacro  exo.xacro  old_exo.xacro  robot_description.xacro  ros2_control.xacro  sensor.xacro  sensor_IMU_macro.xacro  sensor_torque_macro.xacro  transmission.xacro  transmission_macro.xacro
src/exoskeleton/: CMakeLists.txt
src/exoskeleton/urdf/: exo.urdf  exo.xacro
src/exoskeleton_description/: CMakeLists.txt  package.xml
src/exoskeleton_description/config/: urdf.rviz
src/exoskeleton_description/launch/: display.launch.py
src/exoskeleton_description/rviz/: urdf.rviz
src/exoskeleton_description/urdf/: exo.urdf  exo.xacro
(+43 files in other folders)
