<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>exo_urdf</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="marswon0@gmail.com">bob</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

